# body3-sim

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html
.cargo/: config.toml
.github/workflows/: deploy.yml
.serena/: project.yml
benches/: physics_benchmarks.rs
docs/: web-deploy.md
docs/plans/: 2026-07-23-web-port-design.md  2026-07-23-web-port.md
docs/superpowers/plans/: 2026-07-22-benchmark-profiling.md  2026-07-22-egui-config-panel.md  2026-07-22-simulation-module.md  2026-07-23-density-fix.md  2026-07-23-swarm-stability.md  2026-07-24-cloudflare-pages-gha-deploy.md
docs/superpowers/reports/: 2026-07-23-density-fix-report.md
docs/superpowers/specs/: 2026-07-22-benchmark-profiling-design.md  2026-07-22-egui-config-panel-design.md  2026-07-22-simulation-module-design.md  2026-07-24-cloudflare-pages-gha-deploy-design.md
examples/: energy_bench.rs  energy_theta_sweep.rs  escape_diagnostic.rs  profile_workload.rs  softening_sweep.rs  stability_sweep.rs  verify_energy_44000.rs  walk_counter.rs  walk_diagnostic.rs
scripts/: assemble-dist.sh  coop-server.py  publish-web.ps1  serve-web.sh
src/: camera.rs  energy.rs  lib.rs  main.rs  physics.rs  quadtree.rs  simulation.rs  url.rs  wasm_pool.rs
tests/: camera_fit.rs  circumbinary_trojan_slingshot.rs  energy_approx_accuracy.rs  energy_worker.rs  galaxy_collision.rs  integration_params.rs  quadtree_bounds.rs  solar_figure8.rs  spawn_density.rs  stability_regression.rs  theta_config.rs  url_encode.rs  verlet_cache_regression.rs
