[package]
name = "body3-sim"
version = "0.1.0"
edition = "2024"

[dependencies]
macroquad = "0.4.15"
egui-macroquad = "0.17.3"

[features]
default = []

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "physics_benchmarks"
harness = false

# Size-optimize the wasm bundle for web deploy (macroquad build, no wasm-bindgen).
[profile.release]
opt-level = "s"