[package]
name = "body3-sim"
version = "0.1.0"
edition = "2024"

[dependencies]
macroquad = "0.4.15"
egui-macroquad = "0.17.3"

[features]
default = []

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "physics_benchmarks"
harness = false

# Speed-optimized for the swarm force solver. lto=fat + codegen-units=1 keep the
# wasm bundle at ~the same size opt-level="s" produced (2.96 -> 2.99 MB), so the
# throughput win over "s" costs nothing in transit size. (macroquad build, no
# wasm-bindgen.)
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1